--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
    <span>You don't have an account? <a routerLink="/register">Sign up</a></span>
    </div> 
    <form class="form-group" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-   <input name="email" type="email" formControlName="email" placeholder="Email">
+   <input name="username" type="username" formControlName="username" placeholder="Username">
    <input type="password" formControlName="password" placeholder="Password">
    <button>Submit</button>
    </form>
