--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -12,12 +12,13 @@
 }
 
 .signup-card {
-    border-radius: 10px;
+    margin: 2rem;
+    border-radius: 30px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
     width: 40%;
-    height: 450px;
+    height: 100%;
     background-color: #ffffff;
-    padding: 10px 30px;
+    padding: 0rem 1rem;
 }
 
 .card-title {
@@ -59,4 +60,13 @@
 .card-terms span {
     margin: 5px;
     font-size: 13px;
+}
+
+input.ng-invalid.ng-touched {
+  border-color: red;
+}
+
+p {
+  color: red;
+  font-size: 12px;
 }
