--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,15 +4,66 @@
         <span>Already have an account? <a routerLink="/login">Sign In</a></span>
     </div>
     <form class="form-group" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <input type="text" name="nome" placeholder="Nome" formControlName="nome">
-        <input type="text" name="cognome" placeholder="Cognome" formControlName="cognome">
-        <input type="text" name="codiceFiscale" placeholder="Codice Fiscale" formControlName="codiceFiscale">
-        <input type="text" name="username" placeholder="Username" formControlName="username">
-        <input type="email" name="email" placeholder="Email" formControlName="email">
-        <input type="password" name="password" placeholder="Password" formControlName="password">
+        <div>
+            <label for="nome">Nome</label>
+            <input id="nome" type="text" formControlName="nome">
+            <div *ngIf="registerForm.get('nome')?.invalid && registerForm.get('nome')?.touched">
+                <p>Nome è obbligatorio.</p>
+            </div>
+        </div>
+
+        <div>
+            <label for="cognome">Cognome</label>
+            <input id="cognome" type="text" formControlName="cognome">
+            <div *ngIf="registerForm.get('cognome')?.invalid && registerForm.get('cognome')?.touched">
+                <p>Cognome è obbligatorio.</p>
+            </div>
+        </div>
+
+        <div>
+            <label for="codiceFiscale">Codice Fiscale</label>
+            <input id="codiceFiscale" type="text" formControlName="codiceFiscale">
+            <div *ngIf="registerForm.get('codiceFiscale')?.invalid && registerForm.get('codiceFiscale')?.touched">
+                <p>Codice Fiscale è obbligatorio.</p>
+            </div>
+        </div>
+        <div>
+            <label for="username">Username</label>
+            <input id="username" type="text" formControlName="username">
+            <div *ngIf="registerForm.get('username')?.invalid && registerForm.get('username')?.touched">
+                <p>Username è obbligatorio.</p>
+            </div>
+        </div>
+
+        <div>
+            <label for="email">Email</label>
+            <input id="email" type="email" formControlName="email">
+            <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched">
+                <p>Email non è valida.</p>
+            </div>
+        </div>
+
+        <div>
+            <label for="password">Password</label>
+            <input id="password" type="password" formControlName="password">
+            <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
+                <p>Password è obbligatoria.</p>
+            </div>
+        </div>
+
+        <div>
+            <label for="confermaPassword">Conferma Password</label>
+            <input id="confermaPassword" type="password" formControlName="confermaPassword">
+            <div *ngIf="registerForm.get('confermaPassword')?.invalid && registerForm.get('confermaPassword')?.touched">
+                <p>Conferma Password è obbligatoria.</p>
+            </div>
+        </div>
+
+        <div *ngIf="registerForm.errors?.['mismatch']">
+            <p>Le password non coincidono.</p>
+        </div>
+
         <input type="submit" value="Signup">
     </form>
-    <div class="card-terms">
-        <input type="checkbox"> <span>I have read and agree to the <a href="">Terms of Service</a></span>
-    </div>
+
 </div>
