home page finita

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<div class="home-container">
+  <div class="header">
+    <img src="../assets/home2.jpg" alt="Laboratorio Analisi" class="header-image">
+  </div>
+ 
+</div>
+ <div class="content">
+  <h1>Benvenuto nella nostra piattaforma di gestione delle analisi</h1>
+  <p>La nostra applicazione è progettata per offrire un'esperienza utente intuitiva e potente per controllare, modificare ed eliminare le vostre analisi.</p>
+  <p>Con la nostra piattaforma, potrete:</p>
+  <ul>
+    <li>Visualizzare i dettagli delle analisi in qualsiasi momento</li>
+    <li>Modificare le analisi esistenti per aggiornare i dati o le informazioni</li>
+    <li>Eliminare le analisi non più necessarie con un semplice click</li>
+    <li>Monitorare i risultati delle analisi in tempo reale</li>
+  </ul>
+  <p>Il nostro obiettivo è fornirvi strumenti efficaci per gestire le vostre analisi in modo semplice e sicuro.</p>
+  <button class="login-button" (click)="onLoginClick()">Accedi e inizia</button>
+</div>
