messaggio errore aggiunto alla login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,12 +1,19 @@
 <div class="login-card">
+  <div class="card-title">
+    <h1>Login</h1>
+    <span>You don't have an account? <a routerLink="/register">Sign up</a></span>
+  </div>
+  <form class="form-group" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <label for="username">Username</label>
+    <input id="username" name="username" type="text" formControlName="username" placeholder="Username">
     
-   <div class="card-title">
-   <h1>Login</h1>
-   <span>You don't have an account? <a routerLink="/register">Sign up</a></span>
-   </div> 
-   <form class="form-group" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-   <input name="username" type="username" formControlName="username" placeholder="Username">
-   <input type="password" formControlName="password" placeholder="Password">
-   <button>Submit</button>
-   </form>
+    <label for="password">Password</label>
+    <input id="password" type="password" formControlName="password" placeholder="Password">
+    
+    <button type="submit">Submit</button>
+    
+     <div class="error-message" *ngIf="errorMessage">
+      <p>{{ errorMessage }}</p>
     </div>
+  </form>
+</div>
