home analisi aggiunta

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,6 +10,6 @@
     <li><a routerLink="/contact">Blog</a></li>
   </ul>
   <div class="navbar-actions">
-    <button>Submit <a routerLink="/login"></a></button>
+    <button>Logout <a routerLink="/admin"></a></button>
   </div>
 </nav>
