--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,14 +2,18 @@
   <div class="navbar-logo">
     <img src="../assets/navbar.png" alt="Analisi" />
   </div>
-  <ul class="navbar-links">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-<li><a routerLink="/about">Services</a></li>
-<li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/contact">Blog</a></li>
-  </ul>
+  <div class="navbar-search">
+    <input
+      type="text"
+      placeholder="Search..."
+      class="search-input"
+      [(ngModel)]="searchQuery"
+    />
+    <button class="search-button" (click)="onSearch()">
+      <mat-icon>search</mat-icon>
+    </button>
+  </div>
   <div class="navbar-actions">
-    <button>Logout <a routerLink="/admin"></a></button>
+    <button class="logout-button" (click)="onLogout()">Logout</button>
   </div>
 </nav>
