--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,44 +1,68 @@
+/* Stili di base per il navbar */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
-  background-color: #610f3a; /* Primary color */
-  color: white;
+  background-color: #43062c;
+  padding: 10px 20px;
+  font-family: Arial, sans-serif;
 }
 
+/* Logo del navbar */
 .navbar-logo img {
   height: 40px;
 }
 
-.navbar-search {
+/* Stili per la lista dei link */
+.navbar-links {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-links li {
+  margin: 0 10px;
+}
+
+/* Stili per i link */
+.navbar-links a {
+  text-decoration: none;
+  color: white;
+  padding: 8px 16px;
+  transition: background-color 0.3s;
+}
+
+.navbar-links a:hover {
+  background-color: #da3ab8;
+  border-radius: 4px;
+}
+
+/* Stili per le azioni del navbar */
+.navbar-actions {
   display: flex;
   align-items: center;
 }
 
-.search-input {
-  padding: 5px;
-  border: none;
-  border-radius: 4px;
-  margin-right: 5px;
-}
-
-.search-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  color: white;
-}
-
-.navbar-actions .logout-button {
-  background-color: #f436a2b6; /* Warn color */
+.navbar-actions button {
+  background-color: #c730d5;
   color: white;
   border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
+  padding: 10px 20px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
-.navbar-actions .logout-button:hover {
-  background-color: #d32f8486; /* Darker warn color on hover */
+.navbar-actions button:hover {
+  background-color: #a42f7d;
+}
+
+/* Risoluzione dei problemi di nidificazione dell'elemento <a> */
+.navbar-actions button a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar-actions button a:hover {
+  color: white;
 }
