--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,18 +2,14 @@
   <div class="navbar-logo">
     <img src="../assets/navbar.png" alt="Analisi" />
   </div>
-  <div class="navbar-search">
-    <input
-      type="text"
-      placeholder="Search..."
-      class="search-input"
-      [(ngModel)]="searchQuery"
-    />
-    <button class="search-button" (click)="onSearch()">
-      <mat-icon>search</mat-icon>
-    </button>
-  </div>
+  <ul class="navbar-links">
+    <li><a routerLink="/analysis/home">Home</a></li>
+    <li><a routerLink="/about">About</a></li>
+<li><a routerLink="/about">Services</a></li>
+<li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/contact">Blog</a></li>
+  </ul>
   <div class="navbar-actions">
-    <button class="logout-button" (click)="onLogout()">Logout</button>
+    <button>Logout <a routerLink="/"></a></button>
   </div>
 </nav>
