--- a/src/app/analysis/analysis-detail/analysis-detail.component.html
+++ b/src/app/analysis/analysis-detail/analysis-detail.component.html
@@ -48,10 +48,13 @@
     </form>
   </div>
 
-  <div *ngIf="action === 'delete'">
-    <h2>Conferma Eliminazione</h2>
-    <p>Sei sicuro di voler eliminare questa analisi?</p>
-    <button (click)="confirmDelete()">Elimina</button>
-    <button (click)="router.navigate(['/analysis/list'])">Annulla</button>
+<div *ngIf="action === 'delete'" class="analysis-detail-container">
+  <h2 class="text-center">Conferma Eliminazione</h2>
+  <div class="margin-bottom">
+    <p class="text-center">Sei sicuro di voler eliminare questa analisi?</p>
+  </div>
+  <div class="button-container">
+    <button class="delete-button" (click)="confirmDelete()">Elimina</button>
+    <button class="cancel-button" (click)="router.navigate(['/analysis/list'])">Annulla</button>
   </div>
 </div>
