--- a/src/app/analysis/analysis-list/analysis-list.component.html
+++ b/src/app/analysis/analysis-list/analysis-list.component.html
@@ -1,7 +1,12 @@
 <app-navbar></app-navbar>
 <app-filter-bar (filter)="applyFilter($event)"></app-filter-bar>
 <div class="analisi-list-container">
+<div class="actions-header" *ngIf="isAdmin()">
+    <p class="action-text">Per inserire nuove analisi, clicca qui:</p>
+    <button mat-raised-button color="accent" [routerLink]="['/analysis/new']">Nuova Analisi</button>
+  </div>
   <h2>Lista Analisi</h2>
+  
   <table>
     <thead>
       <tr>
